<resources>
    <string name="app_name">Adidas Store</string>
    <string name="signIn">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="email">Эл. почта</string>
    <string name="password">Пароль</string>
    <string name="confirm">Подтвердить</string>
    <string name="name">Имя</string>
    <string name="validation_error">Не все поля заполнены правильно!</string>
    <string name="unknown_error">Unknown error</string>
    <string name="size_placeholder">Размер: %d</string>
    <string name="price_placeholder">Цена: $%d</string>
    <string name="products">Товары</string>
    <string name="cart">Корзина</string>
    <string name="profile">Профиль</string>
    <string name="all">Все</string>
    <string name="shoes">Обувь</string>
    <string name="jackets">Куртки</string>
    <string name="hoodie">Худи</string>
    <string name="shirts">Майки</string>
    <string name="clear_cart">Очистить корзину</string>
    <string name="common_price">Общая стоимость: $%d</string>
    <string name="apply">Применить</string>
    <string name="createOrder">Оформить заказ</string>
    <string name="promocode">Промокод</string>
    <string name="discount">Скидка: %d\%%</string>
    <string name="count_placeholder">Количество: %d</string>
</resources>
