<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.sergeybogdanec.adidasstore.ui.fragment.cart.CartViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/cart"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:items="@{viewModel.items}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/order"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <Button
            android:id="@+id/order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:onClick="@{() -> viewModel.createOrder()}"
            android:text="@string/createOrder"
            app:layout_constraintBottom_toTopOf="@id/clearCart" />

        <Button
            android:id="@+id/clearCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:onClick="@{() -> viewModel.clearCart()}"
            android:text="@string/clear_cart"
            app:layout_constraintBottom_toTopOf="@id/tvPrice" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:paddingVertical="8dp"
            android:text="@{@string/common_price(viewModel.price)}"
            app:layout_constraintBottom_toTopOf="@+id/bApply" />

        <EditText
            android:id="@+id/etCoupon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/promocode"
            android:text="@={viewModel.coupon}"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bApply"
            app:layout_constraintStart_toStartOf="@+id/tvPrice" />

        <Button
            android:id="@+id/bApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.applyCoupon()}"
            android:text="@string/apply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvPrice" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
